fixed button hover problem spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -370,6 +370,8 @@ footer {
   }
 }
 .home .walk .walk-text button:hover {
+  background-color: aqua;
+  color: black;
   border-radius: 100px;
 }
 .home .walk .walk-img {
